--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,44 @@
   "theme_color": "#2A3443",
   "icons": [
     {
-      "src": "./Assets/Icons/ToDo.ico",
-      "sizes": "256x256",
-      "type": "image/ico"
+      "src": "./Assets/Icons/Favicon-72x72.jpg",
+      "sizes": "72x72",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-96x96.jpg",
+      "sizes": "96x96",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-128x128.jpg",
+      "sizes": "128x128",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-144x144.jpg",
+      "sizes": "144x144",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-152x152.jpg",
+      "sizes": "152x152",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-192x192.jpg",
+      "sizes": "192x192",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-384x384.jpg",
+      "sizes": "384x384",
+      "type": "image/jpg"
+    },
+    {
+      "src": "./Assets/Icons/Favicon-512x512.jpg",
+      "sizes": "512x512",
+      "type": "image/jpg"
     }
   ]
 }
