Did some more on last commit

--- a/manifest.json
+++ b/manifest.json
@@ -8,44 +8,44 @@
   "theme_color": "#2A3443",
   "icons": [
     {
-      "src": "./Assets/Icons/Favicon-72x72.jpg",
+      "src": "./Assets/Icons/Favicon-72x72.png",
       "sizes": "72x72",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-96x96.jpg",
+      "src": "./Assets/Icons/Favicon-96x96.png",
       "sizes": "96x96",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-128x128.jpg",
+      "src": "./Assets/Icons/Favicon-128x128.png",
       "sizes": "128x128",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-144x144.jpg",
+      "src": "./Assets/Icons/Favicon-144x144.png",
       "sizes": "144x144",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-152x152.jpg",
+      "src": "./Assets/Icons/Favicon-152x152.png",
       "sizes": "152x152",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-192x192.jpg",
+      "src": "./Assets/Icons/Favicon-192x192.png",
       "sizes": "192x192",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-384x384.jpg",
+      "src": "./Assets/Icons/Favicon-384x384.png",
       "sizes": "384x384",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "./Assets/Icons/Favicon-512x512.jpg",
+      "src": "./Assets/Icons/Favicon-512x512.png",
       "sizes": "512x512",
-      "type": "image/jpg"
+      "type": "image/png"
     }
   ]
 }
